--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#F29721">
+    <script src="https://kit.fontawesome.com/bbd8d96822.js" crossorigin="anonymous"></script>
     <title>Front X - { NameOfProject }</title>
   </head>
   <body>
